Foi incluido na index o codigo do CV, inclusão do CSS na index e algumas alterações de fonte, e borda na imagem.

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CV-Gustavo</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+
+    <img src="1712196892107.jpg" alt="Foto Do Curriculo">
+
+    <hr>
+
+    <h1>Gustavo Henrique de Lima</h1>
+    <p class="tirar_espaco">Analista TI</p>
+    <p><b>Contato e endereço: </b><br>
+    <b>Email:</b> gustavohgordiano@gmail.com <br>
+    <b>Celular:</b> (31) 9 3301-2127 <br>
+    <b>Endereço:</b> Belo Horizonte, Minas Gerais </p>
+
+    <hr>
+
+    <h2>Experiencia</h2>
+
+    <h3>Analista TI</h3>
+    <h4 class="tirar_espaco">Cred MHS</h4>
+    <p><ul>
+        <li>Prestar auxílio a área de TI conhecendo toda a rotina.</li>
+        <li>Prestar suporte técnico aos usuários buscando solucionar problemas em geral de todos os componentes da empresa.</li>
+        <li>Prestar suporte a área de TI elaborando relatórios, atuar com a administração do sistema da empresa.</li>
+        <li>Prestar suporte técnico aos usuários buscando solucionar problemas em geral.</li>
+        <li>Realizar treinamento de clientes e usuários.</li>
+        <li>Gerenciar o PowerAutomate da empresa com as automações que já foram criadas, e também criar novas de acordo com a necessidade da empresa.</li>
+    </ul></p>
+
+    <hr>
+
+    <h2>Formação Acadêmica</h3>
     
-</body>
+    <h3>Técnico em Informática</h3>
+    <h4 class="tirar_espaco">SENAC MG</h4>
+    <p>Duração: 1.200 Horas <br>
+    Início: 08/05/2023 <br>
+    Conclusão: 04/04/2025</p>
+
+    <h3>Bacharelado em Engenharia de Software</h3>
+    <h4 class="tirar_espaco">PUC MINAS</h4>
+    <p>Duração: 3.200 horas. <br>
+    Início: 01/08/2025 <br>
+    Previsão de Conclusão: 22/12/2029</p>
+
+    <hr>
+
+    <h2>Habilidades</h2>
+    <p><ul>
+        <li>JavaScrip</li>
+        <li>Redes</li>
+        <li>Git</li>
+        <li>PowerAutomate</li>
+        <li>Pacote Office</li>
+    </ul></p>
+  </body>
 </html>
